test/spec_vectors/array/fail/module_1.wat
(module (type (array (mut (ref null 10)))))